2014-03-21  Glenn Morris  <rgm@gnu.org>

	* Makefile.in ($(MH_E_DIR)/mh-loaddefs.el)
	($(TRAMP_DIR)/tramp-loaddefs.el, $(CAL_DIR)/cal-loaddefs.el)
	($(CAL_DIR)/diary-loaddefs.el, $(CAL_DIR)/hol-loaddefs.el):
	Don't set `make-backup-files'.

	* info.el (info--prettify-description): New function,
	to give info-finder descriptions consistent case, punctuation.
	(Info-finder-find-node): Use it.  Sort packages.
	Refer to "description" rather than "commentary".

2014-03-21  Juanma Barranquero  <lekktu@gmail.com>

	* frameset.el (frameset--print-register): New function.
	(frameset-to-register): Use it.

2014-03-20  Juanma Barranquero  <lekktu@gmail.com>

	* progmodes/hideif.el (hif-string-to-number): New function.
	(hif-tokenize): Use it to understand non-decimal floats.

	* emacs-lisp/cl-extra.el (cl--map-overlays): Remove obsolete code.

	* skeleton.el (skeleton-autowrap): Mark as obsolete.  Doc fix.

2014-03-20  Stefan Monnier  <monnier@iro.umontreal.ca>

	* electric.el (electric-newline-and-maybe-indent): New command.
	Bind it globally to C-j.
	(electric-indent-mode): Don't mess with the global map any more.
	Don't drop the post-self-insert-hook is some buffer is still using it
	(bug#16770).
	* bindings.el (global-map): Remove C-j binding.

	* emacs-lisp/nadvice.el (advice--make-docstring): Try harder to find
	the docstring of functions advised before dumping (bug#16993).

2014-03-19  Stefan-W. Hahn  <stefan.hahn@s-hahn.de>  (tiny change)

	* ps-print.el (ps-generate-postscript-with-faces):
	Explicitly deactivate the mark (bug#16866).
	* simple.el (deactivate-mark): Update region highlight.

2014-03-19  Juanma Barranquero  <lekktu@gmail.com>

	* emacs-lisp/package.el (describe-package-1):
	Decode commentary (bug#16733).

2014-03-18  Juanma Barranquero  <lekktu@gmail.com>

	* custom.el (defcustom): Doc fix: recommend avoiding destructive
	modification of the value argument of :set (bug#16755).

2014-03-18  Stefan Monnier  <monnier@iro.umontreal.ca>
